fixing the gap between the time-picker presets and the timeline

--- a/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
+++ b/src/app/@ansyn/ansyn/modules/status-bar/components/timepicker-presets/timepicker-presets.component.less
@@ -16,7 +16,7 @@
 
 
 		&.top {
-			bottom: 45px;
+			bottom: 23px;
 		}
 
 		button {
